# rs-id

./: Cargo.toml  README.md  README.zh_CN.md
src/: constants.rs  fast_uuid_like_generator.rs  id_error.rs  id_generator.rs  id_mode.rs  lib.rs  qubit_snowflake_builder.rs  qubit_snowflake_generator.rs  snowflake_generator.rs  sonyflake_generator.rs  time_slice.rs  timestamp_precision.rs  uuid_generator.rs
src/snowflake/: constants.rs  id_mode.rs  mod.rs  qubit_snowflake_builder.rs  qubit_snowflake_generator.rs  snowflake_generator.rs  sonyflake_generator.rs  time_slice.rs  timestamp_precision.rs
src/uuid/: mica_uuid_like_generator.rs  mod.rs
tests/: mod.rs
tests/error/: id_error_tests.rs  mod.rs
tests/fast_uuid_like_generator/: fast_uuid_like_generator_tests.rs
tests/id_generator/: id_generator_tests.rs  mod.rs
tests/qubit_snowflake_generator/: qubit_snowflake_generator_tests.rs
tests/snowflake/: constants_tests.rs  id_mode_tests.rs  mod.rs  qubit_snowflake_builder_tests.rs  time_slice_tests.rs  timestamp_precision_tests.rs
tests/snowflake/qubit_snowflake_generator/: mod.rs  qubit_snowflake_generator_tests.rs
tests/snowflake/snowflake_builder/: mod.rs  snowflake_builder_tests.rs
tests/snowflake/snowflake_generator/: mod.rs  snowflake_generator_tests.rs
tests/snowflake/sonyflake_generator/: mod.rs  sonyflake_generator_tests.rs
tests/snowflake_builder/: snowflake_builder_tests.rs
tests/uuid/: mod.rs
tests/uuid/mica_uuid_like_generator/: mica_uuid_like_generator_tests.rs  mod.rs
tests/uuid_generator/: uuid_generator_tests.rs
