[package]
name = "qubit-id"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-id"
description = "ID generation utilities for Rust, including Qubit Snowflake, classic Snowflake, Sonyflake-style, and fast UUID-like generators"
homepage = "https://github.com/qubit-ltd/rs-id"
documentation = "https://docs.rs/qubit-id"
readme = "README.md"
keywords = ["id", "snowflake", "uuid", "sonyflake", "qubit"]
categories = ["data-structures", "concurrency"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_id"
doctest = true

[dependencies]
getrandom = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
