[package]
name = "qubit-id"
version = "0.2.3"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-id"
description = "ID generation utilities for Rust, including Qubit Snowflake, classic Snowflake, Sonyflake-style, and fast UUID-like generators"
homepage = "https://github.com/qubit-ltd/rs-id"
documentation = "https://docs.rs/qubit-id"
readme = "README.md"
keywords = ["id", "snowflake", "uuid", "sonyflake", "qubit"]
categories = ["data-structures", "concurrency"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_id"
doctest = true

[dependencies]
getrandom = "0.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
